src/test/deca/context/invalid/pierre/objects/callWrongField.deca
class A {}
class B extends A {
    int a;
}
{
    A test = new A();
    test.a = 1;
}
